# forensics-toolkit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
common/: Cargo.toml
common/src/: hash.rs  lib.rs  logging.rs  timestamp.rs
disk/: Cargo.toml
disk/src/: deleted.rs  error.rs  filesystem.rs  image.rs  lib.rs  main.rs  partition.rs
docs/: 2026-06-20.md
macos/: Cargo.toml
macos/src/: error.rs  history.rs  knowledgec.rs  launchagents.rs  lib.rs  main.rs  quarantine.rs
memory/: Cargo.toml
memory/src/: error.rs  info.rs  lib.rs  main.rs  minidump.rs  scan.rs  strings.rs
network/: Cargo.toml
network/src/: connections.rs  dns.rs  error.rs  http.rs  info.rs  lib.rs  main.rs
windows/: Cargo.toml
windows/src/: error.rs  evtx.rs  lib.rs  main.rs  prefetch.rs  registry.rs
