[package]
name = "disk"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
gpt = "4.1"
byteorder = "1.5"
fatfs = "0.3"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3"
