[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
pcap-file = "2"
etherparse = "0.15"

[dev-dependencies]
tempfile = "3"
